--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,4 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript', src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js');
+    script(type='text/javascript', src='http://connect.facebook.net/en_US/all.js');
+    script(type='text/javascript', src='/javascripts/userutils.js');
+    script(type='text/javascript', src='/javascripts/fbutils.js');
   body!= body
