--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,55 @@
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
+  margin: 0px
+  font: 11px "Tahoma", Helvetica, Arial, sans-serif
+  background-color: #E0E0E0
+
+#wrapper 
+   margin: 0 auto
+   width: 1024px
+
+#content 
+    width: 100%
+    
+
+.header
+	background-color: #222
+	height: 30px
+	text-align: left
+	padding: 4px 2px 4px 2px
+
+.boldwhite
+	color: #FFF
+	font-weight: bold
+
+.rightalignblock
+	text-align: right
+
+.blogbutton
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff
+	box-shadow:inset 0px 1px 0px 0px #ffffff
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) )
+	background:-moz-linear-gradient(center top, #ededed 5%, #dfdfdf 100%)
+	background-color:#ededed
+	-moz-border-radius:6px
+	-webkit-border-radius:6px
+	border-radius:6px
+	border:1px solid #dcdcdc
+	display:inline-block
+	color:#777777
+	font-family:arial
+	font-size:10px
+	font-weight:bold
+	padding:6px 24px
+	text-decoration:none
+	text-shadow:1px 1px 0px #ffffff
+
+.blogbutton:hover 
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) )
+	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% )
+	background-color:#dfdfdf
+
+
+.blogbutton:active 
+	position:relative
+	top:1px
