added search box

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -24,32 +24,46 @@ body
 .rightalignblock
 	text-align: right
 
-.blogbutton
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff
-	box-shadow:inset 0px 1px 0px 0px #ffffff
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) )
-	background:-moz-linear-gradient(center top, #ededed 5%, #dfdfdf 100%)
-	background-color:#ededed
-	-moz-border-radius:6px
-	-webkit-border-radius:6px
-	border-radius:6px
-	border:1px solid #dcdcdc
+.blogbutton 
+	-moz-box-shadow: 0px 1px 22px 0px #ffffff
+	-webkit-box-shadow: 0px 1px 22px 0px #ffffff
+	box-shadow: 0px 1px 22px 0px #ffffff
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #dbdbdb) )
+	background:-moz-linear-gradient( center top, #ffffff 5%, #dbdbdb 100% )
+	background-color:#ffffff
+	-moz-border-radius:8px
+	-webkit-border-radius:8px
+	border-radius:8px
+	border:1px solid #696969
 	display:inline-block
-	color:#777777
-	font-family:arial
-	font-size:10px
+	color:#2e2e2e
+	font-family:Arial
+	font-size:11px
 	font-weight:bold
-	padding:6px 24px
+	padding:3px 14px
 	text-decoration:none
-	text-shadow:1px 1px 0px #ffffff
+	text-shadow:1px 1px 16px #ffffff
 
 .blogbutton:hover 
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) )
-	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% )
-	background-color:#dfdfdf
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dbdbdb), color-stop(1, #ffffff) )
+	background:-moz-linear-gradient( center top, #dbdbdb 5%, #ffffff 100% )
+	background-color:#dbdbdb
 
 
 .blogbutton:active 
 	position:relative
 	top:1px
+
+.inputboxclass
+	font-family:Tahoma
+	font-size: 11px
+
+.contentpanel
+	background-color:#ffffff
+	border: #444444
+	min-height: 200px
+	-moz-box-shadow: 0px 1px 5px 0px #666666
+	-webkit-box-shadow: 0px 1px 5px 0px #666666
+	box-shadow: 0px 1px 5px 0px #666666
+	-moz-border-radius:2px
+	-webkit-border-radius:2px
