--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js');
     script(type='text/javascript', src='http://connect.facebook.net/en_US/all.js');
+    script(type='text/javascript', src='/javascripts/phonetic_int.js');
     script(type='text/javascript', src='/javascripts/userutils.js');
   body!= body
