--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -22,6 +22,7 @@ body
 .boldwhite
 	color: #FFF
 	font-weight: bold
+	padding: 4px
 
 .rightalignblock
 	text-align: right
@@ -86,7 +87,7 @@ body
 
 .content-segment
 	border-bottom: solid 1px #CCC
-	padding: 10px 4px 4px 4px
+	padding: 10px 4px 0px 4px
 
 .link-text
 	padding: 2px 4px 0px 2px
@@ -115,3 +116,31 @@ body
 	cursor: pointer
 	font-weight: bold
 	border-radius: 4px
+
+.menulink
+	color: #FFF
+	font-weight: bold
+	cursor: pointer
+	padding: 10px 4px 10px 4px
+
+.menulink:hover
+	color: #888
+	background-color: #fff
+
+.menulink-sel
+	color: #888
+	background-color: #fff
+	font-weight: bold
+	cursor: pointer
+	padding: 10px 4px 10px 4px
+
+.dropdownmenu
+	position: absolute
+	z-index:5000
+	background-color: #fff 
+	min-width: 200px 
+	min-height: 100px
+	border-bottom: solid 1px #222
+	border-left: solid 1px #222
+	border-right: solid 1px #222
+	
