--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,7 +13,7 @@ body
     
 
 .header
-	background-color: #222
+	background-color: #444
 	height: 30px
 	text-align: left
 	padding: 4px 2px 4px 2px
@@ -61,7 +61,7 @@ body
 	font-family:Tahoma
 	font-size: 11px
 	min-height:24px
-	min-width: 280px
+	min-width: 200px
 	border: solid 1px #AAAAAA
 	border-radius: 6px
 
@@ -87,7 +87,7 @@ body
 
 .content-segment
 	border-bottom: solid 1px #CCC
-	padding: 10px 4px 0px 4px
+	padding: 4px 4px 0px 4px
 
 .link-text
 	padding: 2px 4px 0px 2px
@@ -125,22 +125,47 @@ body
 
 .menulink:hover
 	color: #888
-	background-color: #fff
+	background-color: #CCC
 
 .menulink-sel
 	color: #888
 	background-color: #fff
 	font-weight: bold
 	cursor: pointer
-	padding: 10px 4px 10px 4px
+	padding: 12px 4px 12px 4px
 
 .dropdownmenu
 	position: absolute
 	z-index:5000
 	background-color: #fff 
 	min-width: 200px 
-	min-height: 100px
-	border-bottom: solid 1px #222
-	border-left: solid 1px #222
-	border-right: solid 1px #222
-	
+	border-bottom: solid 1px #444
+	border-left: solid 1px #444
+	border-right: solid 1px #444
+
+.menuitem
+	padding: 4px 10px 4px 20px
+	cursor: pointer
+
+.menuitem:hover	
+	background-color: #666
+	color: #fff
+
+.iconsmall
+	max-height: 16px
+	max-width: 16px
+
+.menubaricon
+	padding: 12px 2px 4px 2px
+	cursor: pointer
+
+.menubaricon:hover
+	background-color: #AAA
+
+.menu-bubble
+	background-color: #d44
+	font-size:80%
+	color:#fff
+	padding: 1px 4px 1px 4px
+	border: solid 1px #822
+	border-radius: 8px
