--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,20 @@ div(id="wrapper")
 							input(id="mysearch2", type="search", placeholder="search blogs", class="inputboxclass")
 					td
 						div(class="rightalignblock")
+							div(class="boldwhite") Welcome back!
+					td
+						div(class="rightalignblock")
+							span(class="menubaricon")
+								img(src="http://www.tooctac.com/p/b91280", class="iconsmall")
+								span(class="menu-bubble", id="commentbubble") 10
+							span(class="menubaricon")
+								img(src="http://www.tooctac.com/p/58b4a0", class="iconsmall")
+								span(class="menu-bubble", id="discussionbubble") 8
+							span(class="menubaricon")
+								img(src="http://www.tooctac.com/p/63a3a5", class="iconsmall")
+								span(class="menu-bubble", id="peoplebubble") 2
+					td
+						div(class="rightalignblock")
 							span(id="propic")
 							span(id="profilehome", class="boldwhite")
 							span(id="profilehomearrow", class="menulink", onclick="showhomemenu()")
@@ -24,9 +38,9 @@ div(id="wrapper")
 				tr
 					td(width="480px", valign="top")
 						div(class="content-column")
-							div(class="content-segment", style="background-color: #EEE;")
+							div(class="content-segment", style="background-color: #F8F8F8;")
 								div
-									span(class="hover-text", onclick="showblogui()", id="writeblogdiv") Write a blog post
+									span(class="hover-text", onclick="showblogui()", id="writeblogdiv") Write blog
 									span
 									span(class="hover-text", onclick="showstatusui()") Add a status line
 								br
