--- a/views/index.jade
+++ b/views/index.jade
@@ -47,7 +47,9 @@ div(id="wrapper")
 								div(id="writediv")
 
 
-							div def
+							div(class="content-segment")
+								div(id="result")
+
 
 						
 					td(width="288px", valign="top")
