--- a/views/index.jade
+++ b/views/index.jade
@@ -7,12 +7,6 @@ div(id="wrapper")
 						div(style="padding-right:20px;")
 							img(src="http://www.tooctac.com/p/619168")
 					td
-						div
-							input(id="mysearch2", type="search", placeholder="search blogs", class="inputboxclass")
-					td
-						div(class="rightalignblock")
-							div(class="boldwhite") Welcome back!
-					td
 						div(class="rightalignblock")
 							span(class="menubaricon")
 								img(src="http://www.tooctac.com/p/b91280", class="iconsmall")
@@ -22,7 +16,13 @@ div(id="wrapper")
 								span(class="menu-bubble", id="discussionbubble") 8
 							span(class="menubaricon")
 								img(src="http://www.tooctac.com/p/63a3a5", class="iconsmall")
-								span(class="menu-bubble", id="peoplebubble") 2
+								span(class="menu-bubble", id="peoplebubble") 2					
+					td
+						div
+							input(id="mysearch2", type="search", placeholder="search blogs", class="inputboxclass")
+					td
+						div(class="rightalignblock")
+							div(class="boldwhite", id="titletext")
 					td
 						div(class="rightalignblock")
 							span(id="propic")
