--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,11 @@ div(id="wrapper")
 		div(class="header")
 			table(width="100%", border-spacing="0px")
 				tr
-					td(width="100px", valign="center")
-						div(style="padding-right:20px;")
+					td(valign="center", width="200px")
+						div(style="padding-right:0px;")
 							img(src="http://www.tooctac.com/p/619168")
 					td
-						div(class="rightalignblock")
+						div(class="rightalignblock", style="max-width:120px;")
 							span(class="menubaricon")
 								img(src="http://www.tooctac.com/p/b91280", class="iconsmall")
 								span(class="menu-bubble", id="commentbubble") 10
