--- a/views/index.jade
+++ b/views/index.jade
@@ -38,7 +38,7 @@ div(id="wrapper")
 				tr
 					td(width="480px", valign="top")
 						div(class="content-column")
-							div(class="content-segment", style="background-color: #F8F8F8;")
+							div(class="content-segment", style="background-color: #F8F8F8; visibility: hidden;" id="writepanel")
 								div
 									span(class="hover-text", onclick="showblogui()", id="writeblogdiv") Write blog
 									span
