--- a/views/index.jade
+++ b/views/index.jade
@@ -1,18 +1,18 @@
 div(id="wrapper")
 	div(id="content")
 		div(class="header")
-			table(width="100%", border-spacing="0px")
+			table(width="100%", border-spacing="0px", border-width="1")
 				tr
 					td(valign="center", width="200px")
 						div(style="padding-right:0px;")
 							img(src="http://www.tooctac.com/p/619168")
-					td
+					td(width="280px")
 						div
 							input(id="mysearch2", type="search", placeholder="search blogs", class="inputboxclass")
 					td
 						div(class="rightalignblock")
 							div(class="boldwhite", id="titletext")
-					td
+					td(width="140px")
 						div(class="rightalignblock", style="max-width:120px;")
 							span(class="menubaricon")
 								img(src="http://www.tooctac.com/p/b91280", class="iconsmall")
