--- a/views/index.jade
+++ b/views/index.jade
@@ -18,8 +18,9 @@ div(id="wrapper")
 								img(src="http://www.tooctac.com/p/b91280", class="iconsmall")
 							span(class="menubaricon")
 								img(src="http://www.tooctac.com/p/58b4a0", class="iconsmall")
+								span(class="menu-bubble", id="discussionbubble") 8
 							span(class="menubaricon")
-								img(src="http://www.tooctac.com/p/63a3a5", class="iconsmall")	
+								img(src="http://www.tooctac.com/p/63a3a5", class="iconsmall")
 					td
 						div(class="rightalignblock")
 							span(id="propic")
