--- a/views/index.jade
+++ b/views/index.jade
@@ -16,9 +16,9 @@ div(id="wrapper")
 						div(class="rightalignblock", style="max-width:120px;")
 							span(class="menubaricon", id="commenticon")
 								img(src="http://www.tooctac.com/p/b91280", class="iconsmall")
-							span(class="menubaricon")
+							span(class="menubaricon", id="discussionicon")
 								img(src="http://www.tooctac.com/p/58b4a0", class="iconsmall")
-							span(class="menubaricon")
+							span(class="menubaricon", id="peopleicon")
 								img(src="http://www.tooctac.com/p/63a3a5", class="iconsmall")
 					td
 						div(class="rightalignblock")
