--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -167,6 +167,6 @@ body
 	background-color: #d44
 	font-size:80%
 	color:#fff
+	padding: 1px 4px 1px 4px
 	border: solid 1px #822
 	border-radius: 8px
-	visibility: hidden
