--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,11 @@
 div(id="wrapper")
 	div(id="content")
 		div(class="header")
-			table(width="100%", border-spacing="0px", border-width="1")
+			table(width="100%", border-spacing="0px", border="1")
 				tr
 					td(valign="center", width="200px")
 						div(style="padding-right:0px;")
 							img(src="http://www.tooctac.com/p/619168")
-					td(width="280px")
-						div
-							input(id="mysearch2", type="search", placeholder="search blogs", class="inputboxclass")
-					td
-						div(class="rightalignblock")
-							div(class="boldwhite", id="titletext")
 					td(width="140px")
 						div(class="rightalignblock", style="max-width:120px;")
 							span(class="menubaricon", id="commenticon")
@@ -20,7 +14,14 @@ div(id="wrapper")
 								img(src="http://www.tooctac.com/p/58b4a0", class="iconsmall")
 							span(class="menubaricon", id="peopleicon")
 								img(src="http://www.tooctac.com/p/63a3a5", class="iconsmall")
+					
+					td(width="280px")
+						div
+							input(id="mysearch2", type="search", placeholder="search blogs", class="inputboxclass")
 					td
+						div(class="rightalignblock")
+							div(class="boldwhite", id="titletext")
+					td(width="140px")
 						div(class="rightalignblock")
 							span(id="propic")
 							span(id="profilehome", class="boldwhite")
