--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 div(id="wrapper")
 	div(id="content")
 		div(class="header")
-			table(width="100%", border-spacing="0px", border="1")
+			table(width="100%")
 				tr
 					td(valign="center", width="200px")
 						div(style="padding-right:0px;")
