--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -82,12 +82,19 @@ body
 	height: 24px
 	vertical-align:middle
 
+.smallimgb
+	width: 24px
+	height: 24px
+	border: solid 1px #CCC
+	margin: 1px 1px 1px 1px
+	padding: 1px 1px 1px 1px
+
 .content-column
-	border-right: solid 2px #AAA
+	border-right: solid 2px #CCC
 	max-width: 480px
 
 .content-segment
-	border-bottom: solid 1px #CCC
+	border-bottom: solid 1px #E0E0E0
 	padding: 4px 4px 0px 4px
 
 .link-text
@@ -173,9 +180,22 @@ body
 	margin-left: -5px
 
 .posttitle
-	font-size: 14px
+	font-size: 16px
 	font-weight: bold
+	padding: 8px 0px 0px 2px
+	color: #222
 
 .postsummary
-	font-size: 12px
+	font-size: 14px
 	font-weight: normal
+	padding: 0px 0px 4px 0px
+	color: #444
+
+.postauthor
+	font-size: 12px
+	color: #222
+
+.posttime
+	font-size: 12px
+	color: #CCC
+	font-style: italic
