--- a/views/index.jade
+++ b/views/index.jade
@@ -35,15 +35,28 @@ div(id="wrapper")
 			table(width="100%", valign="top", border-spacing="0px")
 				tr
 					td(width="480px", valign="top")
-						div
+						div(class="content-column")
 							div(id="writeroot")
-						div
-							- for node in nodes
-								div(class="posttitle")
-									span #{node.Title}
-								div(class="postsummary")
-									span #{node.Summary}
-								div= node.Temperature
+						div(class="content-column")
+							- for node in nodes					      
+								div(class="content-segment")
+									div(class="posttitle")
+										span #{node.Title}
+									div
+										table
+											tr
+												td
+													img(src="http://graph.facebook.com/#{node.UserFBId}/picture", class="smallimgb")
+												td
+													div(class="postauthor")
+														span #{node.AuthorName}
+													div(class="posttime")
+														span #{node.PostTime}
+													
+										
+									div(class="postsummary")
+										span #{node.Summary}
+									div= node.Temperature
 						
 					td(width="288px", valign="top")
 
