--- a/views/index.jade
+++ b/views/index.jade
@@ -35,10 +35,9 @@ div(id="wrapper")
 			table(width="100%", valign="top", border-spacing="0px")
 				tr
 					td(width="480px", valign="top")
-						div(class="content-column")
+						div
 							div(id="writeroot")
-							div(class="content-segment")
-								div(id="result")
+							
 
 
 						
