--- a/views/index.jade
+++ b/views/index.jade
@@ -37,9 +37,11 @@ div(id="wrapper")
 					td(width="480px", valign="top")
 						div
 							div(id="writeroot")
-							
-
-
+						div
+							- for (var node in nodes)
+								div node.Name
+								div node.Desc
+								div node.Temperature
 						
 					td(width="288px", valign="top")
 
