--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 ﻿!!! 5
 html
   head
-    title= title
+    title= ব্লগ লিখুন
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js');
     script(type='text/javascript', src='http://connect.facebook.net/en_US/all.js');
