--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-﻿div(id="wrapper")
+div(id="wrapper")
 	div(id="content")
 		div(class="header")
 			table(width="100%")
@@ -20,7 +20,7 @@
 							input(id="mysearch2", type="search", placeholder="search blogs", class="inputboxclass")
 					td
 						div(class="rightalignblock")
-							div(class="boldwhite", id="titletext") ব্লগ লিখুন
+							div(class="boldwhite", id="titletext") 
 					td
 						div(class="rightalignblock")
 							span(id="propic")
