--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -172,3 +172,10 @@ body
 	border-radius: 8px
 	margin-left: -5px
 
+.posttitle
+	font-size: 14px
+	font-weight: bold
+
+.postsummary
+	font-size: 12px
+	font-weight: normal
