--- a/views/index.jade
+++ b/views/index.jade
@@ -39,10 +39,10 @@ div(id="wrapper")
 							div(id="writeroot")
 						div
 							- for node in nodes
-								div(class="posttitle") #
-								a #{node.Title}
-								div(class="postsu
-								#{node.Summary}
+								div(class="posttitle")
+									span #{node.Title}
+								div(class="postsummary")
+									span #{node.Summary}
 								div= node.Temperature
 						
 					td(width="288px", valign="top")
