--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -168,7 +168,7 @@ body
 	cursor: pointer
 
 .menubaricon:hover
-	background-color: #AAA
+	background-color: #888
 
 .menu-bubble
 	background-color: #d44
