--- a/views/index.jade
+++ b/views/index.jade
@@ -56,7 +56,7 @@ div(id="wrapper")
 										
 									div(class="postsummary")
 										span #{node.Desc}
-										a(class="detailslink", href="/post/#{node.Id}") see more
+										span(id="detailslink", name="detailslink", link="#{node.Id}") ...
 									
 						
 					td(width="288px", valign="top")
