--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -199,3 +199,12 @@ body
 	font-size: 12px
 	color: #CCC
 	font-style: italic
+
+.detailslink
+	font-size: 10px
+	color: #CCC
+	border-botton: dotted 1px #888
+
+.bloglink	
+	font-size: 10px
+	color: #CCC
