--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -201,10 +201,10 @@ body
 	font-style: italic
 
 .detailslink
-	font-size: 10px
-	color: #CCC
-	border-botton: dotted 1px #888
+	font-size: 12px
+	color: #CCF
+	border-bottom: dotted 1px #88E
 
 .bloglink	
-	font-size: 10px
+	font-size: 12px
 	color: #CCC
