--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -202,8 +202,9 @@ body
 
 .detailslink
 	font-size: 12px
-	color: #CCF
-	border-bottom: dotted 1px #88E
+	color: #88E
+	border-bottom: dotted 1px #66C
+	cursor: pointer
 
 .bloglink	
 	font-size: 12px
