--- a/views/index.jade
+++ b/views/index.jade
@@ -57,6 +57,10 @@ div(id="wrapper")
 									div(class="postsummary", id="details_#{node.Id}")
 										span #{node.Desc}
 										span(id="detailslink", name="detailslink", link="#{node.Id}") ...
+									div(class="postfooter")
+										span
+											img(src="http://www.tooctac.com/p/6269cc")
+											span(class="postfooter-counters") #{node.ChildCount}
 									
 						
 					td(width="288px", valign="top")
