--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -201,7 +201,7 @@ body
 	font-style: italic
 
 .detailslink
-	font-size: 12px
+	font-size: 10px
 	color: #88E
 	border-bottom: dotted 1px #66C
 	cursor: pointer
@@ -210,3 +210,21 @@ body
 .bloglink	
 	font-size: 12px
 	color: #CCC
+
+.postfooter
+	background-color: #F0F0F0
+	padding: 2px 2px 10px 2px
+
+.postfooter-span
+	padding: 0px 4px 0px 4px
+	cursor: pointer
+
+.postfooter-counter
+	padding: 0px 2px 2px 4px
+	font-style: bold
+
+
+
+
+
+
