--- a/views/index.jade
+++ b/views/index.jade
@@ -58,9 +58,12 @@ div(id="wrapper")
 										span #{node.Desc}
 										span(id="detailslink", name="detailslink", link="#{node.Id}") ...
 									div(class="postfooter")
-										span
+										span(class="postfooter-span")
 											img(src="http://www.tooctac.com/p/6269cc")
 											span(class="postfooter-counters") #{node.ChildCount}
+										span(class="postfooter-span")
+											img(src="http://www.tooctac.com/p/5a1ab")
+										
 									
 						
 					td(width="288px", valign="top")
