--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -201,9 +201,8 @@ body
 	font-style: italic
 
 .detailslink
-	font-size: 10px
+	font-size: 11px
 	color: #88E
-	border-bottom: dotted 1px #66C
 	cursor: pointer
 	font-weight: bold
 
@@ -213,13 +212,16 @@ body
 
 .postfooter
 	background-color: #F0F0F0
-	padding: 2px 2px 10px 2px
+	margin: 2px 2px 10px 2px
 
 .postfooter-span
-	padding: 0px 4px 0px 4px
+	padding: 2px 4px 2px 4px
 	cursor: pointer
 
-.postfooter-counter
+.postfooter-span : hover
+	backgound-color: #CCC
+
+.postfooter-counters
 	padding: 0px 2px 2px 4px
 	font-style: bold
 
