--- a/views/index.jade
+++ b/views/index.jade
@@ -59,10 +59,12 @@ div(id="wrapper")
 										span(id="detailslink", name="detailslink", link="#{node.Id}") ...
 									div(class="postfooter")
 										span(class="postfooter-span")
+											a(href="/post/#{node.Id}", target="_blank")
+												img(src="http://www.tooctac.com/p/5a1ab")
+										span(class="postfooter-span")
 											img(src="http://www.tooctac.com/p/6269cc")
 											span(class="postfooter-counters") #{node.ChildCount}
-										span(class="postfooter-span")
-											img(src="http://www.tooctac.com/p/5a1ab")
+										
 										
 									
 						
