--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -213,17 +213,18 @@ body
 .postfooter
 	background-color: #F0F0F0
 	margin: 2px 2px 10px 2px
+	border-radius: 4px
 
 .postfooter-span
 	padding: 2px 4px 2px 4px
 	cursor: pointer
 
-.postfooter-span : hover
+.postfooter-span:hover
 	backgound-color: #CCC
 
 .postfooter-counters
 	padding: 0px 2px 2px 4px
-	font-style: bold
+	font-weight: bold
 
 
 
