--- a/views/index.jade
+++ b/views/index.jade
@@ -64,6 +64,9 @@ div(id="wrapper")
 										span(class="postfooter-span")
 											img(src="http://www.tooctac.com/p/6269cc")
 											span(class="postfooter-counters") #{node.ChildCount}
+										span(class="postfooter-span")
+											img(src="http://www.tooctac.com/p/ab6e9f")
+											span(class="postfooter-counters") #{node.UniqueVisitCount}
 										
 										
 									
