--- a/views/index.jade
+++ b/views/index.jade
@@ -31,7 +31,7 @@ div(id="wrapper")
 
 							
 
-		div(id="main", style="margin: 0;")
+		div(id="main", style="margin: 0; padding-top: 40px;")
 			table(width="100%", valign="top", border-spacing="0px")
 				tr
 					td(width="480px", valign="top")
