--- a/views/index.jade
+++ b/views/index.jade
@@ -72,6 +72,15 @@ div(id="wrapper")
 									
 						
 					td(width="288px", valign="top")
+						div
+							div(class="dashboard")
+								div 
+									b 2
+									span posts and
+									b 25
+									span comments since your last login
+								
+
 
 							
 					td(width="256px", valign="top")
