--- a/views/index.jade
+++ b/views/index.jade
@@ -74,12 +74,8 @@ div(id="wrapper")
 					td(width="288px", valign="top")
 						div
 							
-
-								
-
-
-							
 					td(width="256px", valign="top")
 						div
 							div(id="fb-root")
+							div(id="postblog", style="display:none;") Test Content
 							
