--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js');
+    script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js');
     script(type='text/javascript', src='http://connect.facebook.net/en_US/all.js');
     script(type='text/javascript', src='/javascripts/phonetic_int.js');
     script(type='text/javascript', src='/javascripts/userutils.js');
