--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css", rel="stylesheet", type="text/css")
     script(type='text/javascript', src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js');
     script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js');
     script(type='text/javascript', src='http://connect.facebook.net/en_US/all.js');
